# zlog

./: CMakeLists.txt  LICENSE  README.md
src/: zlogging.cpp  zlogging.h
tests/: example.cpp  performance_test.cpp
